--- a/package.json
+++ b/package.json
@@ -6,14 +6,18 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "~18.1.0",
+    "@angular/cdk": "~18.1.1",
     "@angular/common": "~18.1.0",
     "@angular/compiler": "~18.1.0",
     "@angular/core": "~18.1.0",
     "@angular/forms": "~18.1.0",
+    "@angular/material": "~18.1.1",
     "@angular/platform-browser": "~18.1.0",
     "@angular/platform-browser-dynamic": "~18.1.0",
     "@angular/router": "~18.1.0",
     "@nx/angular": "19.5.2",
+    "mqtt": "^5.8.1",
+    "ngx-mqtt": "^17.0.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.3"
@@ -28,6 +32,7 @@
     "@angular/cli": "~18.1.0",
     "@angular/compiler-cli": "~18.1.0",
     "@angular/language-service": "~18.1.0",
+    "@angular/material": "^18.1.1",
     "@nx/cypress": "19.5.2",
     "@nx/eslint": "19.5.2",
     "@nx/eslint-plugin": "19.5.2",
@@ -53,6 +58,7 @@
     "jest-preset-angular": "~14.1.0",
     "nx": "19.5.2",
     "prettier": "^2.6.2",
+    "sass": "^1.77.8",
     "ts-jest": "^29.1.0",
     "ts-node": "10.9.1",
     "typescript": "~5.5.2"
