successfully configured mqtt config

--- a/apps/kamsguard-web/project.json
+++ b/apps/kamsguard-web/project.json
@@ -27,7 +27,7 @@
         ],
         "styles": [
           "apps/kamsguard-web/src/custom-theme.scss",
-          "apps/kamsguard-web/src/styles.css"
+          "apps/kamsguard-web/src/styles.scss"
         ],
         "scripts": [
         ]
