--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "@angular/platform-browser": "~18.1.0",
     "@angular/platform-browser-dynamic": "~18.1.0",
     "@angular/router": "~18.1.0",
+    "@cloudamqp/amqp-client": "^3.1.1",
     "@nx/angular": "19.5.2",
+    "hls.js": "^1.5.13",
     "mqtt": "^5.8.1",
     "ngx-mqtt": "^17.0.0",
     "rxjs": "~7.8.0",
