--- a/package.json
+++ b/package.json
@@ -17,9 +17,13 @@
     "@angular/router": "~18.1.0",
     "@cloudamqp/amqp-client": "^3.1.1",
     "@nx/angular": "19.5.2",
+    "cors": "^2.8.5",
     "hls.js": "^1.5.13",
+    "http-proxy": "^1.18.1",
+    "http-proxy-middleware": "^3.0.0",
     "mqtt": "^5.8.1",
     "ngx-mqtt": "^17.0.0",
+    "nodemailer": "^6.9.14",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.3"
