--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@cloudamqp/amqp-client": "^3.1.1",
     "@nx/angular": "19.5.2",
     "cors": "^2.8.5",
+    "dotenv-mono": "^1.3.14",
     "hls.js": "^1.5.13",
     "http-proxy": "^1.18.1",
     "http-proxy-middleware": "^3.0.0",
