--- a/package.json
+++ b/package.json
@@ -11,22 +11,26 @@
     "@angular/compiler": "~18.1.0",
     "@angular/core": "~18.1.0",
     "@angular/forms": "~18.1.0",
-    "@angular/material": "~18.1.1",
     "@angular/platform-browser": "~18.1.0",
     "@angular/platform-browser-dynamic": "~18.1.0",
     "@angular/router": "~18.1.0",
     "@cloudamqp/amqp-client": "^3.1.1",
     "@nx/angular": "19.5.2",
+    "axios": "^1.7.3",
     "cors": "^2.8.5",
     "dotenv-mono": "^1.3.14",
+    "express": "^4.19.2",
     "hls.js": "^1.5.13",
     "http-proxy": "^1.18.1",
     "http-proxy-middleware": "^3.0.0",
+    "moment": "^2.30.1",
     "mqtt": "^5.8.1",
     "ngx-mqtt": "^17.0.0",
     "nodemailer": "^6.9.14",
+    "nodemailer-express-handlebars": "^6.1.2",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
+    "ws": "^8.18.0",
     "zone.js": "~0.14.3"
   },
   "devDependencies": {
@@ -39,7 +43,7 @@
     "@angular/cli": "~18.1.0",
     "@angular/compiler-cli": "~18.1.0",
     "@angular/language-service": "~18.1.0",
-    "@angular/material": "^18.1.1",
+    "@angular/material": "^18.1.4",
     "@nx/cypress": "19.5.2",
     "@nx/eslint": "19.5.2",
     "@nx/eslint-plugin": "19.5.2",
