--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "cors": "^2.8.5",
     "dotenv-mono": "^1.3.14",
     "express": "^4.19.2",
+    "ffmpeg": "^0.0.4",
+    "fluent-ffmpeg": "^2.1.3",
     "hls.js": "^1.5.13",
     "http-proxy": "^1.18.1",
     "http-proxy-middleware": "^3.0.0",
@@ -29,6 +31,7 @@
     "nodemailer": "^6.9.14",
     "nodemailer-express-handlebars": "^6.1.2",
     "rxjs": "~7.8.0",
+    "sharp": "^0.33.4",
     "tslib": "^2.3.0",
     "ws": "^8.18.0",
     "zone.js": "~0.14.3"
