--- a/.env
+++ b/.env
@@ -1,3 +1,6 @@
 EMAIL_USER=melvin.njuguna@kamsware.com
 EMAIL_PASS=Password100!!
 API_BASE_URL=http://localhost:3000
+# Credentials for CGI endpoint
+CGI_USERNAME=admin
+CGI_PASSWORD=password
