--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "@nx/angular": "19.5.2",
     "axios": "^1.7.3",
     "cors": "^2.8.5",
+    "csv-parse": "^5.5.6",
+    "dotenv": "^16.4.5",
     "dotenv-mono": "^1.3.14",
     "express": "^4.19.2",
     "ffmpeg": "^0.0.4",
@@ -28,6 +30,7 @@
     "moment": "^2.30.1",
     "mqtt": "^5.8.1",
     "ngx-mqtt": "^17.0.0",
+    "node-fetch": "^2.7.0",
     "nodemailer": "^6.9.14",
     "nodemailer-express-handlebars": "^6.1.2",
     "rxjs": "~7.8.0",
