--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "rxjs": "~7.8.0",
     "sharp": "^0.33.4",
     "tslib": "^2.3.0",
+    "uuid": "^10.0.0",
     "ws": "^8.18.0",
     "zone.js": "~0.14.3"
   },
