updated vercel error

--- a/vercel.json
+++ b/vercel.json
@@ -1,4 +1,7 @@
   {
     "name": "kamsguard-web",
-    "buildCommand": "nx build kamsguard-web"
+    "buildCommand": "nx build kamsguard-web",
+    "rewrites": [
+        {"source": "/(.*)", "destination": "/"}
+    ]
   }
