--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "0.0.0",
   "license": "MIT",
   "scripts": {
-    "kamsguard-web:build":"nx build kamsguard-web --prod"
+    "kamsguard-web:build": "nx build kamsguard-web --prod",
+    "kamsguard-server:serve": "nx serve kamsguard-server"
   },
   "private": true,
   "dependencies": {
@@ -54,27 +55,32 @@
     "@angular/language-service": "~18.1.0",
     "@angular/material": "^18.1.4",
     "@nx/cypress": "19.5.2",
+    "@nx/esbuild": "19.7.3",
     "@nx/eslint": "19.5.2",
     "@nx/eslint-plugin": "19.5.2",
-    "@nx/jest": "19.5.2",
-    "@nx/js": "19.5.2",
+    "@nx/jest": "19.7.3",
+    "@nx/js": "19.7.3",
+    "@nx/node": "19.7.3",
     "@nx/web": "19.5.2",
     "@nx/workspace": "19.5.2",
     "@schematics/angular": "~18.1.0",
     "@swc-node/register": "~1.9.1",
     "@swc/core": "~1.5.7",
     "@swc/helpers": "~0.5.11",
+    "@types/express": "~4.17.13",
     "@types/jest": "^29.4.0",
     "@types/node": "18.16.9",
     "@typescript-eslint/eslint-plugin": "^7.16.0",
     "@typescript-eslint/parser": "^7.16.0",
     "@typescript-eslint/utils": "^7.16.0",
     "cypress": "^13.13.0",
+    "esbuild": "^0.19.2",
     "eslint": "~8.57.0",
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-cypress": "^2.13.4",
-    "jest": "^29.4.1",
+    "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.4.1",
+    "jest-environment-node": "^29.7.0",
     "jest-preset-angular": "~14.1.0",
     "nx": "19.5.2",
     "prettier": "^2.6.2",
