--- a/apps/kamsguard-server/project.json
+++ b/apps/kamsguard-server/project.json
@@ -11,7 +11,7 @@
       "defaultConfiguration": "production",
       "options": {
         "platform": "node",
-        "outputPath": "api",
+        "outputPath": "api/api",
         "format": ["cjs"],
         "bundle": false,
         "main": "apps/kamsguard-server/src/main.js",
