--- a/apps/kamsguard-server/package.json
+++ b/apps/kamsguard-server/package.json
@@ -11,8 +11,13 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "axios": "^1.7.7",
+    "body-parser": "^1.20.3",
     "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
     "express": "^4.19.2",
-    "moment": "^2.30.1"
+    "moment": "^2.30.1",
+    "nodemailer": "^6.9.15",
+    "uuid": "^10.0.0"
   }
 }
