--- a/apps/kamsguard-server/package.json
+++ b/apps/kamsguard-server/package.json
@@ -4,6 +4,7 @@
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
+    "dev": "node --watch index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -17,6 +18,7 @@
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "moment": "^2.30.1",
+    "mqtt": "^5.10.1",
     "nodemailer": "^6.9.15",
     "uuid": "^10.0.0"
   }
