added mongodb configuration

--- a/apps/kamsguard-server/.env
+++ b/apps/kamsguard-server/.env
@@ -1,6 +1,8 @@
 EMAIL_USER=melvin.njuguna@kamsware.com
 EMAIL_PASS=Password100!!
 API_BASE_URL=http://localhost:3000
-# Credentials for CGI endpoint
 CGI_USERNAME=admin
 CGI_PASSWORD=password
+
+PORT=3001
+MONGOURL=mongodb+srv://melvinnjuguna:PckDFkIrI0CPdjPz@cluster1.gqatx.mongodb.net/?retryWrites=true&w=majority&appName=Cluster1
