--- a/apps/kamsguard-server/package.json
+++ b/apps/kamsguard-server/package.json
@@ -18,6 +18,7 @@
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "moment": "^2.30.1",
+    "mongoose": "^8.6.3",
     "mqtt": "^5.10.1",
     "nodemailer": "^6.9.15",
     "uuid": "^10.0.0"
