--- a/package.json
+++ b/package.json
@@ -32,8 +32,10 @@
     "http-proxy": "^1.18.1",
     "http-proxy-middleware": "^3.0.0",
     "moment": "^2.30.1",
+    "mongodb": "^6.9.0",
     "mqtt": "^5.8.1",
     "ngx-mqtt": "^17.0.0",
+    "ngx-toastr": "^19.0.0",
     "node-fetch": "^2.7.0",
     "nodemailer": "^6.9.14",
     "nodemailer-express-handlebars": "^6.1.2",
