--- a/apps/kamsguard-server/.env
+++ b/apps/kamsguard-server/.env
@@ -5,4 +5,5 @@ CGI_USERNAME=admin
 CGI_PASSWORD=password
 
 PORT=3001
-MONGOURL=mongodb+srv://melvinnjuguna:PckDFkIrI0CPdjPz@cluster1.gqatx.mongodb.net/?retryWrites=true&w=majority&appName=Cluster1
+
+EVENTSMONGOURL=mongodb+srv://Admin:Password@detector-events.e4bsy.mongodb.net/events-database?retryWrites=true&w=majority
