--- a/apps/kamsguard-server/package.json
+++ b/apps/kamsguard-server/package.json
@@ -18,9 +18,11 @@
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "moment": "^2.30.1",
+    "mongodb": "^6.9.0",
     "mongoose": "^8.6.3",
     "mqtt": "^5.10.1",
     "nodemailer": "^6.9.15",
+    "nodemon": "^3.1.7",
     "uuid": "^10.0.0"
   }
 }
