--- a/apps/kamsguard-web/project.json
+++ b/apps/kamsguard-web/project.json
@@ -56,6 +56,9 @@
     },
     "serve": {
       "executor": "@angular-devkit/build-angular:dev-server",
+      "options": {
+        "proxyConfig": "apps/kamsguard-web/src/proxy.conf.json" 
+      },
       "configurations": {
         "production": {
           "buildTarget": "kamsguard-web:build:production"
