--- a/apps/kamsguard-web/project.json
+++ b/apps/kamsguard-web/project.json
@@ -56,6 +56,9 @@
     },
     "serve": {
       "executor": "@angular-devkit/build-angular:dev-server",
+      "options": {
+        "proxyConfig": "apps/kamsguard-web/src/proxy.conf.json" 
+      },
       "configurations": {
         "production": {
           "buildTarget": "kamsguard-web:build:production"
@@ -86,7 +89,7 @@
       "executor": "@nx/web:file-server",
       "options": {
         "buildTarget": "kamsguard-web:build",
-        
+        "proxyConfig": "src/proxy.conf.json",
         "port": 4200,
         "staticFilePath": "dist/apps/kamsguard-web/browser",
         "spa": true
