--- a/apps/kamsguard-web/project.json
+++ b/apps/kamsguard-web/project.json
@@ -57,7 +57,7 @@
     "serve": {
       "executor": "@angular-devkit/build-angular:dev-server",
       "options": {
-        "proxyConfig": "apps/kamsguard-web/src/proxy.conf.json" 
+        "proxyConfig": "apps/kamsguard-web/proxy.conf.json" 
       },
       "configurations": {
         "production": {
@@ -89,7 +89,7 @@
       "executor": "@nx/web:file-server",
       "options": {
         "buildTarget": "kamsguard-web:build",
-        "proxyConfig": "src/proxy.conf.json",
+        "proxyConfig": "apps/kamsguard-web/proxy.conf.json",
         "port": 4200,
         "staticFilePath": "dist/apps/kamsguard-web/browser",
         "spa": true
