--- a/apps/kamsguard-web/project.json
+++ b/apps/kamsguard-web/project.json
@@ -57,7 +57,7 @@
     "serve": {
       "executor": "@angular-devkit/build-angular:dev-server",
       "options": {
-        "proxyConfig": "apps/kamsguard-web/proxy.conf.json" 
+        "proxyConfig": "proxy.conf.json" 
       },
       "configurations": {
         "production": {
