--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@angular/common": "~18.1.0",
     "@angular/compiler": "~18.1.0",
     "@angular/core": "~18.1.0",
+    "@angular/fire": "^18.0.1",
     "@angular/forms": "~18.1.0",
     "@angular/platform-browser": "~18.1.0",
     "@angular/platform-browser-dynamic": "~18.1.0",
@@ -28,6 +29,7 @@
     "dotenv-mono": "^1.3.14",
     "express": "^4.19.2",
     "ffmpeg": "^0.0.4",
+    "firebase": "^10.13.2",
     "fluent-ffmpeg": "^2.1.3",
     "hls.js": "^1.5.13",
     "http-proxy": "^1.18.1",
