--- a/package.json
+++ b/package.json
@@ -30,13 +30,18 @@
     "express": "^4.19.2",
     "ffmpeg": "^0.0.4",
     "firebase": "^10.13.2",
+    "flag-icon-css": "^4.1.7",
     "fluent-ffmpeg": "^2.1.3",
     "hls.js": "^1.5.13",
     "http-proxy": "^1.18.1",
     "http-proxy-middleware": "^3.0.0",
+    "intl-tel-input": "^17.0.8",
+    "libphonenumber-js": "^1.11.11",
     "moment": "^2.30.1",
     "mongodb": "^6.9.0",
     "mqtt": "^5.8.1",
+    "ngx-intl-tel-input-gg": "^1.0.12",
+    "ngx-mask": "^18.0.0",
     "ngx-mqtt": "^17.0.0",
     "ngx-toastr": "^19.0.0",
     "node-fetch": "^2.7.0",
@@ -46,12 +51,12 @@
     "sharp": "^0.33.4",
     "tslib": "^2.3.0",
     "uuid": "^10.0.0",
-    "vercel": "^37.4.2",
+    "vercel": "^32.3.0",
     "ws": "^8.18.0",
     "zone.js": "~0.14.3"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~18.1.0",
+    "@angular-devkit/build-angular": "^18.2.7",
     "@angular-devkit/core": "~18.1.0",
     "@angular-devkit/schematics": "~18.1.0",
     "@angular-eslint/eslint-plugin": "^18.0.1",
