--- a/apps/kamsguard-server/package.json
+++ b/apps/kamsguard-server/package.json
@@ -24,6 +24,7 @@
     "mqtt": "^5.10.1",
     "nodemailer": "^6.9.15",
     "nodemon": "^3.1.7",
+    "socket.io": "^4.8.0",
     "uuid": "^10.0.0"
   }
 }
