adjusted email template

--- a/apps/kamsguard-server/.env
+++ b/apps/kamsguard-server/.env
@@ -1,6 +1,6 @@
 EMAIL_USER=melvin.njuguna@kamsware.com
 EMAIL_PASS=Password100!!
-API_BASE_URL=http://localhost:3000
+API_BASE_URL=https://kamsguard-server.vercel.app
 CGI_USERNAME=admin
 CGI_PASSWORD=password
 
