--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "intl-tel-input": "^17.0.8",
     "libphonenumber-js": "^1.11.11",
     "moment": "^2.30.1",
+    "moment-timezone": "^0.5.46",
     "mongodb": "^6.9.0",
     "mqtt": "^5.8.1",
     "ngx-intl-tel-input-gg": "^1.0.12",
