--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "ngx-intl-tel-input-gg": "^1.0.12",
     "ngx-mask": "^18.0.0",
     "ngx-mqtt": "^17.0.0",
+    "ngx-spinner": "^17.0.0",
     "ngx-toastr": "^19.0.0",
     "node-fetch": "^2.7.0",
     "nodemailer": "^6.9.14",
