--- a/apps/kamsguard-server/package.json
+++ b/apps/kamsguard-server/package.json
@@ -17,6 +17,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "firebase-admin": "^12.6.0",
     "http-proxy": "^1.18.1",
     "http-proxy-middleware": "^3.0.2",
     "moment": "^2.30.1",
